fdo#76565 Allow pasting into input fields

Change-Id: If996284aeea4b430cceaaf264035aa9e4ec0f2f0
Reviewed-on: https://gerrit.libreoffice.org/10835
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>